button in events on mobile fix, padding in sticky header mobile

--- a/source/css/scss/custom/_M47-Event-Hero-Sticky-CTA.scss
+++ b/source/css/scss/custom/_M47-Event-Hero-Sticky-CTA.scss
@@ -31,8 +31,10 @@
 		border-bottom: 1px solid $tertiary5;
 	}
 
-	.cta {
-		width: 100%;
+	.cta {	
+		@include media-breakpoint-up(sm) {
+			width: 100%;
+		}
 		@include media-breakpoint-up(md) {
 			width: 240px;
 		}
